erro corrections in code

--- a/html/home.html
+++ b/html/home.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head><title>Home</title>
@@ -6,7 +5,7 @@
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
- <body>
+ <body id="body">
   <div id="main">
     <div id="main-panel" class="row" >
 	<div class="col-md-8">Shopping Lists</div>
@@ -34,41 +33,3 @@
 	</div>
   </div>
  </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head><title>Home</title>
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
- <body>
-  <div id="main">
-    <div id="main-panel" class="row" >
-	<div class="col-md-8">Shopping Lists</div>
-	   <div class="col-md-4">
-     <form>
-	 <input type="button" name="logoutEdit" value="Logout">
-	</form>
-	</div>
-	</div>
-	
-	<div id="main-background">
-	 <div id="sign-up-panel"> 
-	  <div id="signin-panel">
-	   My Shopping Lists
-	   <!--single row-->
-	   <i class="fa fa-plus-square" aria-hidden="true"></i>
-	  </div>
-	
-	</div>
-	<div class="list-group">
-  <a href="#" class="list-group-item">first list</a>
-  <a href="#" class="list-group-item">Second list</a>
-  <a href="#" class="list-group-item">Third list</a>
-	</div>
-	</div>
-  </div>
- </body>
->>>>>>> babe0384fdfe8bf7c65678566a716c91fa42c804
-</html>
