--- a/html/home.html
+++ b/html/home.html
@@ -18,9 +18,8 @@
 	
 	<div id="main-background">
 	 <div id="sign-up-panel"> 
-	  <div id="signin-panel">
 	   My Shopping Lists
-	   <!--single row-->
+	   <div class="col-md-4">
 	   <i class="fa fa-plus-square" aria-hidden="true"></i>
 	  </div>
 	
